Autocomplete results align - fixed

--- a/src/modules/app/components/top-menu/top-menu.component.scss
+++ b/src/modules/app/components/top-menu/top-menu.component.scss
@@ -48,7 +48,7 @@
     height: 12px;
     fill: #9e9e9e;
     line-height: 40px;
-    padding-left: 20px;
+    padding-left: 12px;
     color: #9e9e9e;
   }
 
@@ -315,6 +315,7 @@
 
   .completer-input {
     cursor: text;
+    margin-left: 0 !important;
   }
 
   .mdb-autocomplete-clear {
